--- a/app/views/antigen/v2/global-registration/previous-infection.html
+++ b/app/views/antigen/v2/global-registration/previous-infection.html
@@ -16,9 +16,9 @@
   </div>
 
   {% if data['have-you-travelled-overseas'] == "Yes" %}
-  <a class="govuk-back-link" href="../../../genomic-variants/1-which-countries-travelled-to.html">Back</a>
+  <a class="govuk-back-link" href="/antigen/{{version}}/global-registration/1-which-countries-travelled-to.html">Back</a>
   {% else %}
-  <a class="govuk-back-link" href="../../../genomic-variants/1-have-you-travelled-overseas.html">Back</a>
+  <a class="govuk-back-link" href="/antigen/{{version}}/global-registration/1-have-you-travelled-overseas.html">Back</a>
   {% endif %}
 
 {% endblock %}
