--- a/app/views/lfd-home-ordering/v1/scottish-isles-error.html
+++ b/app/views/lfd-home-ordering/v1/scottish-isles-error.html
@@ -46,7 +46,7 @@
                         </h1>
                     </legend>
                     <ul class="govuk-list govuk-list--bullet">
-                      <li>you're planning on travelling to a Scottish Island</li>
+                      <!-- <li>you're planning on travelling to a Scottish Island</li> -->
                       <li>you were asked to get tested by a local authority</li>
                       <li>you were asked to get tested by an NHS Public Health team</li>
                     </ul>
