--- a/app/views/lfd-home-ordering/v1/lft-unavailable.html
+++ b/app/views/lfd-home-ordering/v1/lft-unavailable.html
@@ -37,7 +37,7 @@
         </p>
         <p class="govuk-body">
           <a href="https://www.gov.uk/getting-tested-for-coronavirus" class="govuk-link" target="blank">Find out more about getting tested if you do not have symptoms</a><br>
-          <a href="https://www.gov.scot/publications/coronavirus-covid-19-getting-tested/pages/community-testing/" class="govuk-link" target="blank">Getting tested if travelling to the Scottish Islands</a>
+          <a href="https://www.gov.scot/publications/coronavirus-covid-19-getting-tested/pages/community-testing/" class="govuk-link" target="blank">Getting tested if you're in Scotland</a>
         </p>  
     </div>
 </div>
