--- a/app/views/lfd-home-ordering/v1/nhs-testing-programme.html
+++ b/app/views/lfd-home-ordering/v1/nhs-testing-programme.html
@@ -1,5 +1,5 @@
 {% set version = "v1" %}
-{% set pageTitle = "Do you need the test for any of these reasons?" %}
+{% set pageTitle = "Do you work for the NHS in England and take part in their staff testing programme?" %}
 
 {% extends "includes/layout.html" %}
 
@@ -15,7 +15,7 @@
     </p>
   </div>
 
-<a class="govuk-back-link" href="/lfd-home-ordering/{{version}}/country">Back</a>
+  <a class="govuk-back-link" href="/lfd-home-ordering/{{version}}/country">Back</a>
 {% endblock %}
 
 {% block content %}
@@ -23,32 +23,27 @@
 <div class="govuk-grid-row">
     <div class="govuk-grid-column-two-thirds">
 
-        <form action="/lfd-home-ordering/{{version}}/action10/scottish-isles" method="post">
+          <form action="/lfd-home-ordering/{{version}}/action10/nhs-testing-programme" method="post">
 
             <div class="govuk-form-group">
-                <fieldset class="govuk-fieldset" aria-describedby="scottish-isles-hint">
+                <fieldset class="govuk-fieldset">
                     <legend class="govuk-fieldset__legend govuk-fieldset__legend--l">
                         <h1 class="govuk-heading-xl govuk-!-margin-bottom-4">
                             {{ pageTitle }}
                         </h1>
                     </legend>
-                    <ul class="govuk-list govuk-list--bullet">
-                        <!-- <li>You're planning on travelling to a Scottish Island</li> -->
-                        <li>you were asked to get tested by a local authority</li>
-                        <li>you were asked to get tested by an NHS Public Health team</li>
-                    </ul>
                     <div class="govuk-radios govuk-!-margin-top-5" data-module="govuk-radios">
 
                         <div class="govuk-radios__item">
-                            <input class="govuk-radios__input" id="scottish-isles-1" name="scottish-isles" type="radio" value="Yes" {{ checked("scottish-isles", "Yes") }}>
-                            <label class="govuk-label govuk-radios__label" for="scottish-isles-1">
+                            <input class="govuk-radios__input" id="nhs-testing-programme-1" name="nhs-testing-programme" type="radio" value="Yes" {{ checked("nhs-testing-programme", "Yes") }}>
+                            <label class="govuk-label govuk-radios__label" for="nhs-testing-programme-1">
                                 Yes
                             </label>
                         </div>
 
                         <div class="govuk-radios__item">
-                            <input class="govuk-radios__input" id="scottish-isles-2" name="scottish-isles" type="radio" value="No" {{ checked("scottish-isles", "No") }}>
-                            <label class="govuk-label govuk-radios__label" for="scottish-isles-2">
+                            <input class="govuk-radios__input" id="nhs-testing-programme-2" name="nhs-testing-programme" type="radio" value="No" {{ checked("nhs-testing-programme", "No") }}>
+                            <label class="govuk-label govuk-radios__label" for="nhs-testing-programme-2">
                                 No
                             </label>
                         </div>
